ola-parser/src/testdata/syntaxTests/constants/constant_virtual.sol
u256 constant virtual x;
// ----
// ParserError 2314: (14-21): Expected identifier but got 'virtual'
